fix(ui): header overflow (#406)

--- a/web/src/ui/pages/Home/Home.module.scss
+++ b/web/src/ui/pages/Home/Home.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
+    justify-content: flex-start;
     align-items: center;
 }
 
